; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-strxcpyx.c_test_strscpy.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-strxcpyx.c_test_strscpy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"12345\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_strscpy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_strscpy() #0 {
  %1 = alloca [25 x i8], align 16
  %2 = alloca i64, align 8
  store i64 25, i64* %2, align 8
  %3 = getelementptr inbounds [25 x i8], [25 x i8]* %1, i64 0, i64 0
  %4 = load i64, i64* %2, align 8
  %5 = call i64 @strscpy(i8* %3, i64 %4, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  store i64 %5, i64* %2, align 8
  %6 = getelementptr inbounds [25 x i8], [25 x i8]* %1, i64 0, i64 0
  %7 = call i32 @streq(i8* %6, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %8 = call i32 @assert_se(i32 %7)
  %9 = load i64, i64* %2, align 8
  %10 = icmp eq i64 %9, 20
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert_se(i32 %11)
  ret void
}

declare dso_local i64 @strscpy(i8*, i64, i8*) #1

declare dso_local i32 @assert_se(i32) #1

declare dso_local i32 @streq(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
